--- a/Style.css
+++ b/Style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: orange;
+  background-color: blue;
   }
 
 h1 {
@@ -8,6 +8,5 @@ h1 {
   }
 
 p {
-  font-family: montserrat;
   font-size: 20px;
   }
